@@ -1,1 +1,1 @@
-1.0-svn
+1.0-beta2
